--- a/openatlas/templates/tabs.html
+++ b/openatlas/templates/tabs.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-6">
             <ul class="nav nav-tabs" role="tablist">
-                {% for id_, tab in tabs.items() if tab.header and (id_ not in config.SUBUNITS + ['node'] or tab.table.rows or tab.buttons): %}
+                {% for id_, tab in tabs.items() if tab.title and (tab.title == 'info' or tab.buttons or ('table' in tab and tab.table.rows)): %}
                     <li class="nav-item">
                         <a
                             role="tab"
@@ -11,7 +11,7 @@
                             href="#tab-{{ id_|replace('_', '-') }}"
                             class="nav-link {{ 'active' if loop.first else '' }}"
                             aria-selected="{{ 'true' if loop.first else 'false' }}">
-                                {{ tab.header|uc_first }}
+                                {{ tab.title|uc_first }}
                                 {% if 'table' in tab: %}
                                     {{ tab.table|format_tab_number }}
                                 {% endif %}
@@ -20,7 +20,7 @@
                 {% endfor %}
             </ul>
             <div class="tab-content">
-                {% for id_, tab in tabs.items() if tab.header and (id_ not in config.SUBUNITS + ['node'] or tab.table.rows or tab.buttons): %}
+                {% for id_, tab in tabs.items() if tab.title and (tab.title == 'info' or tab.buttons or ('table' in tab and tab.table.rows)): %}
                     {% if loop.index == 1 %}
                         <div class="tab-pane fade show active" role="tabpanel" id="tab-{{ id_ }}">
                             {% block tab_info %}{% endblock%}
