--- a/openatlas/templates/types/view.html
+++ b/openatlas/templates/types/view.html
@@ -1,77 +1,31 @@
-{% extends "layout.html" %}
+{% extends "tabs.html" %}
 {% block title_name %} - {{ node.name }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_('types'), 'node_index'], root, node.name]|crumb }}
 {% endblock %}
-{% block content %}
-<div>
-    <ul class="nav nav-tabs" role="tablist">
-        <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-info">{{ _('info')|uc_first }}</a></li>
-        {% if tables.subs.rows %}
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-subs">{{ _('subs')|uc_first }} {{ tables.subs|format_tab_number }}</a></li>
+
+{% block tab_info %}
+    <div class="toolbar">
+        {{ 'form/type'|manual }}
+        {% if 'editor'|is_authorized and node.root and not root.locked %}
+            {{ _('edit')|button(url_for('node_update', id_=node.id)) }}
+                {% if not node.system and node.count < 1 and not node.subs %}
+                    {{ _('delete')|button(url_for('node_delete', id_=node.id), onclick="return confirm('" + _('delete')|uc_first + " " + node.name.replace("'", '').replace('"', '') + "?');") }}
+                {% endif %}
         {% endif %}
-        {% if tables.entities.rows or tables.link_entities.rows %}
-            <li>
-                <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-entities">{{ _('entities')|uc_first }} {{ (tables.entities.rows|length + tables.link_entities.rows|length)|format_tab_number }}</a>
-            </li>
-        {% endif %}
-        <li><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false"  href="#tab-file">{{ _('files')|uc_first }} {{ tables.file|format_tab_number|safe }}</a></li>
-    </ul>
-    <div class="tab-content">
-        <div class="tab-pane fade show active" role="tabpanel" id="tab-info">
-            <div class="toolbar">
-                {{ 'form/type'|manual }}
-                {% if 'editor'|is_authorized and node.root and not root.locked %}
-                    {{ _('edit')|button(url_for('node_update', id_=node.id)) }}
-                        {% if not node.system and node.count < 1 and not node.subs %}
-                            {{ _('delete')|button(url_for('node_delete', id_=node.id), onclick="return confirm('" + _('delete')|uc_first + " " + node.name.replace("'", '').replace('"', '') + "?');") }}
-                        {% endif %}
-                {% endif %}
-            </div>
-            <h1>{{ node.name }}</h1>
-            {{ profile_image_id|display_profile_image }}
-            <div style="float:left;">
-                {% if super_ %}
-                    <p>{{_('super')|uc_first}}: {{ super_|link|safe }}</p>
-                {% endif %}
-                {{ info|display_info }}
-                {% if root.value_type %}
-                    <p>{{_('unit')|uc_first}}: {{node.description}}</p>
-                {% else %}
-                    {{ node|description }}
-                {% endif %}
-            </div>
-            <div style="clear:both;"></div>
-        </div>
-        {% if tables.subs.rows %}
-            <div class="tab-pane fade" role="tabpanel" id="tab-subs">
-                {{ tables.subs.display('subs')|safe }}
-            </div>
-        {% endif %}
-        {% if tables.entities.rows or tables.link_entities.rows %}
-            <div class="tab-pane fade" role="tabpanel" id="tab-entities">
-                {% if 'editor'|is_authorized and not root.value_type %}
-                    <div class="toolbar">
-                        {{ _('move entities')|button(url_for('node_move_entities', id_=node.id)) }}
-                    </div>
-                {% endif %}
-                {% if tables.entities.rows %}
-                    {{ tables.entities.display('entities')|safe }}
-                {% endif %}
-                {% if tables.link_entities.rows %}
-                    {{ tables.link_entities.display('link_entities')|safe }}
-                {% endif %}
-            </div>
-        {% endif %}
-        <div class="tab-pane fade" role="tabpanel" id="tab-file">
-            {% if 'contributor'|is_authorized %}
-                <div class="toolbar">
-                    {{ _('add')|button(url_for('entity_add_file', id_=node.id)) }}
-                    {{ _('file')|button(url_for('file_insert', origin_id=node.id)) }}
-                </div>
-            {% endif %}
-            {{ tables.file.display('file')|safe }}
-        </div>
     </div>
-</div>
+    <h1>{{ node.name }}</h1>
+    {{ profile_image_id|display_profile_image }}
+    <div style="float:left;">
+        {% if super_ %}
+            <p>{{_('super')|uc_first}}: {{ super_|link|safe }}</p>
+        {% endif %}
+        {{ info|display_info }}
+        {% if root.value_type %}
+            <p>{{_('unit')|uc_first}}: {{node.description}}</p>
+        {% else %}
+            {{ node|description }}
+        {% endif %}
+    </div>
+    <div style="clear:both;"></div>
 {% endblock %}
