--- a/openatlas/templates/tabs.html
+++ b/openatlas/templates/tabs.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-6">
             <ul class="nav nav-tabs" role="tablist">
-                {% for id_, tab in tabs.items() if tab.title and (id_ == 'info' or tab.buttons or ('table' in tab and tab.table.rows)): %}
+                {% for id_, tab in tabs.items() if id_ == 'info' or tab.buttons or ('table' in tab and tab.table.rows): %}
                     <li class="nav-item">
                         <a
                             role="tab"
@@ -12,7 +12,7 @@
                             class="nav-link {{ 'active' if loop.first else '' }}"
                             aria-selected="{{ 'true' if loop.first else 'false' }}">
                                 {{ tab.title|uc_first }}
-                                {% if 'table' in tab: %}
+                                {% if tab.table: %}
                                     {{ tab.table|format_tab_number }}
                                 {% endif %}
                         </a>
@@ -20,7 +20,7 @@
                 {% endfor %}
             </ul>
             <div class="tab-content">
-                {% for id_, tab in tabs.items() if tab.title and (id_ == 'info' or tab.buttons or ('table' in tab and tab.table.rows)): %}
+                {% for id_, tab in tabs.items() if id_ == 'info' or tab.buttons or ('table' in tab and tab.table.rows): %}
                     {% if loop.index == 1 %}
                         <div class="tab-pane fade show active" role="tabpanel" id="tab-{{ id_ }}">
                             {% block tab_info %}{% endblock%}
@@ -34,7 +34,7 @@
                                     {% endfor %}
                                 </div>
                             {% endif %}
-                            {% if 'table' in tab: %}
+                            {% if tab.table: %}
                                 {{ tab.table.display(id_)|safe }}
                             {% endif %}
                         </div>
