--- a/openatlas/static/css/reset.css
+++ b/openatlas/static/css/reset.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 html, body, div, span, iframe, h1, h2, h3, p, blockquote, pre, a, b, u, i, center, dl, dt, dd, fieldset,
-form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, section, summary {
+form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, section, summary,
+form ol, form ul, form li {
     margin: 0;
     padding: 0;
     border: 0;
@@ -8,20 +9,29 @@ form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, section, s
     font: inherit;
     vertical-align: baseline;
 }
+
+from ol, form ul {
+    list-style: none;
+}
+
 body {
     line-height: 1;
 }
+
 blockquote, q {
     quotes: none;
 }
+
 blockquote:before, blockquote:after, q:before, q:after {
     content: '';
     content: none;
 }
+
 table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
 a img {
     border: none;
 }
