--- a/openatlas/templates/user/insert.html
+++ b/openatlas/templates/user/insert.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block title_name %} - {{ _('user')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('admin'), 'admin_index'], '+ ' + ('user')|uc_first]|crumb }}
+    <a href="{{ url_for('admin_index') }}#tab-user">{{ _('admin')|uc_first }}</a>&nbsp;> + {{ ('user')|uc_first }}
 {% endblock %}
 {% block content %}
     {{ form|display_form('user-form', manual_page='admin/user') }}
