--- a/openatlas/templates/user/view.html
+++ b/openatlas/templates/user/view.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title_name %} - {{ user.username }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('admin'), 'admin_index'], _('user'), user.username]|crumb }}
+    <a href="{{ url_for('admin_index') }}#tab-user">{{ _('admin')|uc_first }}</a>&nbsp;> {{ user.username }}
 {% endblock %}
 {% block content %}
     {% if 'manager'|is_authorized %}
