--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -221,7 +221,7 @@ form input[type="text"].month, form input[type="text"].day {
 
 #description {
     height: 8em;
-    width: 30em;
+    width: 65%;
 }
 
 .description {
