--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -72,6 +72,7 @@
             link_wiki='<a target="_blank" rel="noopener" href="https://redmine.openatlas.eu/projects/uni/wiki">Wiki</a>'|safe,
             link_demo='<a target="_blank" rel="noopener" href="https://demo.openatlas.eu">Demo</a>'|safe
         )|nl2br|safe }}
+
         <h2>{{ _('team')|uc_first }}</h2>
         <p>Stefan Eichert - Idea, concept and data modelling</p>
         <p>Alexander Watzinger - Lead developer and concept</p>
@@ -79,6 +80,7 @@
         <p>Christoph Hoffmann - Frontend development</p>
         <p>Veronika Gründhammer - Project administration</p>
         <p>Jan Belik - Logo design and design consulting</p>
+        <p>Nina Brundke - Bioarchaeological expertise</p>
 
         <h2>Contributors</h2>
         <p>These people supported us in many ways, our thanks goes to all of them.</p>
@@ -91,7 +93,6 @@
             Judith Pucher<br>
             Katharina Winckler<br>
             Mihailo Popović<br>
-            Nina Brundke<br>
             Peter Andorfer<br>
             Petra Heinicker<br>
             Roland Filzwieser<br>
