--- a/openatlas/templates/model/class_view.html
+++ b/openatlas/templates/model/class_view.html
@@ -4,32 +4,32 @@
     {{ [[_('model'), 'model_index'], [_('classes'), 'class_index'], class_.code]|crumb }}
 {% endblock %}
 {% block content %}
-    <div style="float:left;padding-right:2em;">
+    <div style="float:left;" class="col-sm-1">
         <p>
             <strong>{{ _('info')|uc_first }}</strong>
         </p>
         {{ info|display_info }}
     </div>
     {% if tables.super.rows %}
-        <div style="float:left;padding-right:2em;">
+        <div style="float:left;" class="col-sm-2">
             <p><strong>{{ _('super')|uc_first }}</strong></p>
             {{ tables.super.display('super')|safe }}
         </div>
     {% endif %}
     {% if tables.sub.rows %}
-        <div style="float:left;padding-right:2em;">
+        <div style="float:left;" class="col-sm-2">
             <p><strong>{{ _('subs')|uc_first }}</strong></p>
             {{ tables.sub.display('sub')|safe }}
         </div>
     {% endif %}
     {% if tables.domains.rows %}
-        <div style="float:left;padding-right:2em;">
+        <div style="float:left;" class="col-sm-2">
             <p><strong>{{ _('domain for')|uc_first }}</strong></p>
             {{ tables.domains.display('domains')|safe }}
         </div>
     {% endif %}
     {% if tables.ranges.rows %}
-        <div style="float:left;padding-right:2em;">
+        <div style="float:left;" class="col-sm-2">
             <p><strong>{{ _('range for')|uc_first }}</strong></p>
             {{ tables.ranges.display('ranges')|safe }}
         </div>
