--- a/openatlas/templates/model/property_view.html
+++ b/openatlas/templates/model/property_view.html
@@ -4,18 +4,18 @@
     {{ [[_('model'), 'model_index'], [_('properties'), 'property_index'], property.code]|crumb }}
 {% endblock %}
 {% block content %}
-    <div style="float:left;padding-right:2em;">
+    <div style="float:left;" class="col-sm-2">
         <p><strong>{{ _('info')|uc_first }}</strong></p>
         {{ info|display_info }}
     </div>
     {% if tables.super.rows %}
-        <div style="float:left;padding-right:2em;">
+        <div style="float:left;" class="col-sm-2">
             <p><strong>{{ _('super')|uc_first }}</strong></p>
             {{ tables.super.display('super')|safe }}
         </div>
     {% endif %}
     {% if tables.sub.rows %}
-        <div style="float:left;padding-right:2em;">
+        <div style="float:left;" class="col-sm-2">
             <p><strong>{{ _('subs')|uc_first }}</strong></p>
             {{ tables.sub.display('sub')|safe }}
         </div>
