--- a/openatlas/templates/index/changelog.html
+++ b/openatlas/templates/index/changelog.html
@@ -11,19 +11,20 @@
         <div class="changelog-date">
             {{ version[0] }}
         </div>
-        <p>
+        <ul>
             {% for issue_type, issues in version[1].items() %}
                 {% for issue_number, issue_text in issues.items() %}
-                    {% if issue_number %}
-                        &#8226 {{ issue_type|uc_first }}
-                        <a target="_blank" rel="noopener" href="https://redmine.openatlas.eu/issues/{{ issue_number }}">
-                            #{{ issue_number }}
-                        </a> {{ issue_text|safe }}<br>
-                    {% else %}
-                        &#8226 {{ issue_text|safe }}
-                    {% endif %}
+                    <li class="changelog">
+                        {% if issue_number %}
+                            {{ issue_type|uc_first }}
+                            <a target="_blank" rel="noopener" href="https://redmine.openatlas.eu/issues/{{ issue_number }}"> #{{ issue_number }} </a>
+                            {{ issue_text|safe }}
+                        {% else %}
+                            {{ issue_text|safe }}
+                        {% endif %}
+                    </li>
                 {% endfor %}
             {% endfor %}
-        </p>
+        </ul>
     {% endfor %}
 {% endblock %}
