--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -159,6 +159,10 @@ p {
     margin: 0.5em 0 1em;
 }
 
+#geonames_precision {
+    margin: 0 0.4em;
+}
+
 form input[type="text"].year {
     text-align: right;
     width: 4em;
