--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -65,14 +65,8 @@
             <p>{{ intro|safe }}</p>
         {% endif %}
         <h1>OpenAtlas</h1>
-        {{ _('text_intro',
-            link_openatlas='<a target="_blank" rel="noopener" href="https://openatlas.eu/">OpenAtlas</a>'|safe,
-            link_github='<a target="_blank" rel="noopener" href="https://github.com/craws/OpenAtlas">GitHub</a>'|safe,
-            link_cidoc='<a target="_blank" rel="noopener" href="http://www.cidoc-crm.org/">CIDOC CRM</a>'|safe,
-            link_wiki='<a target="_blank" rel="noopener" href="https://redmine.openatlas.eu/projects/uni/wiki">Wiki</a>'|safe,
-            link_demo='<a target="_blank" rel="noopener" href="https://demo.openatlas.eu">Demo</a>'|safe
-        )|nl2br|safe }}
-
+        <a target="_blank" rel="noopener" href="https://openatlas.eu/">OpenAtlas</a>
+        {{ _('text_intro') }}
         <h2>{{ _('team')|uc_first }}</h2>
         <p>Stefan Eichert - Idea, concept and data modelling</p>
         <p>Alexander Watzinger - Lead developer and concept</p>
