--- a/openatlas/templates/tabs.html
+++ b/openatlas/templates/tabs.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-6">
             <ul class="nav nav-tabs" role="tablist">
-                {% for id_, tab in tabs.items() if id_ == 'info' or tab.buttons or tab.table.rows: %}
+                {% for id_, tab in tabs.items() if id_ == 'info' or tab.buttons or tab.table.rows %}
                     <li class="nav-item">
                         <a
                             role="tab"
@@ -17,21 +17,21 @@
                 {% endfor %}
             </ul>
             <div class="tab-content">
-                {% for id_, tab in tabs.items() if id_ == 'info' or tab.buttons or tab.table.rows: %}
+                {% for id_, tab in tabs.items() if id_ == 'info' or tab.buttons or tab.table.rows %}
                     {% if loop.index == 1 %}
                         <div class="tab-pane fade show active" role="tabpanel" id="tab-{{ id_ }}">
                             {% block tab_info %}{% endblock%}
                         </div>
                     {% else %}
                         <div class="tab-pane fade" role="tabpanel" id="tab-{{ id_|replace('_', '-') }}">
-                            {% if tab.buttons:  %}
+                            {% if tab.buttons  %}
                                 <div class="toolbar">
-                                    {% for button in tab.buttons: %}
+                                    {% for button in tab.buttons %}
                                         {{ button|safe }}
                                     {% endfor %}
                                 </div>
                             {% endif %}
-                            {% if tab.table.rows: %}
+                            {% if tab.table.rows %}
                                 {{ tab.table.display(id_)|safe }}
                             {% endif %}
                         </div>
