layout changes to mediate #1278

--- a/openatlas/static/css/map.css
+++ b/openatlas/static/css/map.css
@@ -1,9 +1,8 @@
 #map {
     z-index: 0;
-    float: left;
-    height: calc(100vh - 140px);
+    float: right;
+    height: calc(100vh - 145px);
     width: 100%;
-    margin-left: 1em;
 }
 
 .mapFormDiv {
