--- a/openatlas/templates/event/view.html
+++ b/openatlas/templates/event/view.html
@@ -5,23 +5,30 @@
 {% endblock %}
 
 {% block tab_info %}
-    <div class="toolbar">
-        {{ 'menu/event'|manual }}
-        {% if 'contributor'|is_authorized %}
-            {{ _('edit')|button(url_for('event_update', id_=event.id)) }}
-            {{ event|display_delete_link }}
-        {% endif %}
-        {{ event.id|bookmark_toggle }}
-    </div>
-    <h1>{{ event.name }}</h1>
-    <div>
-        {{ profile_image_id|display_profile_image }}
-        <div style="float:left;">
-            {{ info|display_info }}
-            {{ event|note }}
-            {{ event|display_external_references }}
-            {{ event|description }}
+    <div class="row">
+        <div class="col-6">
+            <div class="toolbar">
+                {{ 'menu/event'|manual }}
+                {% if 'contributor'|is_authorized %}
+                    {{ _('edit')|button(url_for('event_update', id_=event.id)) }}
+                    {{ event|display_delete_link }}
+                {% endif %}
+                {{ event.id|bookmark_toggle }}
+            </div>
+            <h1>{{ event.name }}</h1>
+            {{ profile_image_id|display_profile_image }}
+            <div style="float:left;">
+                {{ info|display_info }}
+                {{ event|note }}
+                {{ event|display_external_references }}
+                {{ event|description }}
+            </div>
         </div>
-        <div style="clear:both;"></div>
+        <div class="col-6">
+            {% if gis_data %}
+                <div id="map" class="map"></div>
+                <script src="/static/js/map/map.js"></script>
+            {% endif %}
+        </div>
     </div>
 {% endblock %}
