--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -7,7 +7,8 @@
 <div class="row">
     <div class="col-6">
         <ul class="nav nav-tabs" role="tablist">
-            <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-files">{{ _('files')|uc_first }}</a></li>
+            {{ 'files'|tab_header(active=True) }}
+            {{ 'user'|tab_header(table=tables.user) }}
             <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-user">{{ _('user')|uc_first }} {{ tables.user|format_tab_number }}</a></li>
             {% if 'admin'|is_authorized %}
                 <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-general">{{ _('general')|uc_first }}</a></li>
