--- a/openatlas/templates/admin/check_dates.html
+++ b/openatlas/templates/admin/check_dates.html
@@ -10,26 +10,26 @@
 <div class="row">
     <div class="col-6">
         <ul class="nav nav-tabs" role="tablist">
-            <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-dates">{{ _('invalid dates')|uc_first }} {{ tables.dates|format_tab_number }}</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-link-dates">{{ _('invalid link dates')|uc_first }} {{ tables.link_dates|format_tab_number }}</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-involvement-dates">{{ _('invalid involvement dates')|uc_first }} {{ tables.involvement_dates|format_tab_number }}</a></li>
+            {{ 'invalid dates'|tab_header(active=True, table=tables.dates) }}
+            {{ 'invalid link dates'|tab_header(table=tables.link_dates) }}
+            {{ 'invalid involvement dates'|tab_header(table=tables.involvement_dates) }}
         </ul>
         <div class="tab-content">
-            <div class="tab-pane fade show active" role="tabpanel" id="tab-dates">
+            <div class="tab-pane fade show active" role="tabpanel" id="tab-invalid-dates">
                 {% if tables.dates.rows %}
                     {{ tables.dates.display('dates')|safe }}
                 {% else %}
                     {{ _('Congratulations, everything looks fine!') }}
                 {% endif %}
             </div>
-            <div class="tab-pane fade" role="tabpanel" id="tab-link-dates">
+            <div class="tab-pane fade" role="tabpanel" id="tab-invalid-link-dates">
                 {% if tables.link_dates.rows %}
                    {{ tables.link_dates.display('link_dates')|safe }}
                 {% else %}
                     {{ _('Congratulations, everything looks fine!') }}
                 {% endif %}
             </div>
-            <div class="tab-pane fade" role="tabpanel" id="tab-involvement-dates">
+            <div class="tab-pane fade" role="tabpanel" id="tab-invalid-involvement-dates">
                 {% if tables.involvement_dates.rows %}
                     {{ tables.involvement_dates.display('involvement_dates')|safe }}
                 {% else %}
