--- a/openatlas/templates/admin/check_orphans.html
+++ b/openatlas/templates/admin/check_orphans.html
@@ -10,15 +10,15 @@
 <div class="row">
     <div class="col-6">
         <ul class="nav nav-tabs" role="tablist">
-            <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-orphan">{{ _('orphans')|uc_first }} {{ tables.orphans|format_tab_number }}</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-unlinked">{{ _('unlinked')|uc_first }} {{ tables.unlinked|format_tab_number }}</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-nodes">{{ _('type')|uc_first }} {{ tables.nodes|format_tab_number }}</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-missing-files">{{ _('missing files')|uc_first }} {{ tables.missing_files|format_tab_number }}</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-orphaned-files">{{ _('orphaned files')|uc_first }} {{ tables.orphaned_files|format_tab_number }}</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-circular">{{ _('circular dependencies')|uc_first }} {{ tables.circular|format_tab_number }}</a></li>
+            {{ 'orphans'|tab_header(active=True, table=tables.orphans) }}
+            {{ 'unlinked'|tab_header(table=tables.unlinked) }}
+            {{ 'type'|tab_header(table=tables.nodes) }}
+            {{ 'missing files'|tab_header(table=tables.missing_files) }}
+            {{ 'orphaned files'|tab_header(table=tables.orphaned_files) }}
+            {{ 'circular dependencies'|tab_header(table=tables.circular) }}
         </ul>
         <div class="tab-content">
-            <div class="tab-pane fade show active" role="tabpanel" id="tab-orphan">
+            <div class="tab-pane fade show active" role="tabpanel" id="tab-orphans">
                 {% if tables.orphans.rows and 'admin'|is_authorized %}
                     <div class="toolbar">
                         {{ _('delete orphans')|button(url_for('admin_orphans_delete', parameter='orphans'), onclick="return confirm('" + _('delete orphans')|uc_first + "?')") }}
@@ -37,7 +37,7 @@
                     {{ _('Congratulations, everything looks fine!') }}
                 {% endif %}
             </div>
-            <div class="tab-pane fade" role="tabpanel" id="tab-nodes">
+            <div class="tab-pane fade" role="tabpanel" id="tab-type">
                 {% if tables.nodes.rows and 'admin'|is_authorized %}
                     <div class="toolbar">
                         {{ _('delete types')|button(url_for('admin_orphans_delete', parameter='types'), onclick="return confirm('" + _('delete types')|uc_first + "?')") }}
@@ -68,7 +68,7 @@
                     {{ _('Congratulations, everything looks fine!') }}
                 {% endif %}
             </div>
-            <div class="tab-pane fade" role="tabpanel" id="tab-circular">
+            <div class="tab-pane fade" role="tabpanel" id="tab-circular-dependencies">
                 {% if tables.circular.rows %}
                     {{ tables.circular.display('circular')|safe }}
                 {% else %}
