--- a/openatlas/templates/import/project_view.html
+++ b/openatlas/templates/import/project_view.html
@@ -7,9 +7,9 @@
 <div class="row">
     <div class="col-6">
         <ul class="nav nav-tabs" role="tablist">
-            <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-info">{{ _('info')|uc_first }}</a></li>
+            {{ 'info'|tab_header(active=True) }}
             {% if table.rows %}
-                <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-entity">{{ _('entities')|uc_first }} {{ table|format_tab_number }}</a></li>
+                {{ 'entities'|tab_header(table=table) }}
             {% endif %}
         </ul>
         <div class="tab-content">
@@ -32,7 +32,7 @@
                 {{ project|description }}
             </div>
             {% if table.rows %}
-                <div class="tab-pane fade" role="tabpanel" id="tab-entity">
+                <div class="tab-pane fade" role="tabpanel" id="tab-entities">
                     {{ table.display()|safe }}
                 </div>
             {% endif %}
