Added Klaus to contributors

--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -64,17 +64,18 @@
         {% if intro: %}
             <p>{{ intro|safe }}</p>
         {% endif %}
+
         <h1>OpenAtlas</h1>
-        <a target="_blank" rel="noopener" href="https://openatlas.eu/">OpenAtlas</a>
-        {{ _('text_intro') }}
+        <a target="_blank" rel="noopener" href="https://openatlas.eu/">OpenAtlas</a> {{ _('text_intro') }}
+
         <h2>{{ _('team')|uc_first }}</h2>
         <p>Stefan Eichert - Idea, concept and data modelling</p>
         <p>Alexander Watzinger - Lead developer and concept</p>
         <p>Bernhard Koschicek - Software development</p>
         <p>Christoph Hoffmann - Frontend development</p>
-        <p>Veronika Gründhammer - Project administration</p>
-        <p>Jan Belik - Logo design and design consulting</p>
         <p>Nina Brundke - Bioarchaeological expertise</p>
+        <p>Jan Belik - Logo design and design consulting</p>
+        <p>Veronika Gründhammer - Project administration</p>
 
         <h2>Contributors</h2>
         <p>These people supported us in many ways, our thanks goes to all of them.</p>
@@ -86,6 +87,7 @@
             Johannes Preiser-Kapeller<br>
             Judith Pucher<br>
             Katharina Winckler<br>
+            Klaus Illmayer<br>
             Mihailo Popović<br>
             Peter Andorfer<br>
             Petra Heinicker<br>
