Added Britta to contributors

--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -81,6 +81,7 @@
         <p>These people supported us in many ways, our thanks goes to all of them.</p>
         <p>
             Asil Çetin<br>
+            Britta Breuers<br>
             Christof Rauchenberger<br>
             Dalibor Pančić<br>
             Daniel Kittel<br>
