Edit module defaults at admin

--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -27,7 +27,7 @@
                 <div class="toolbar">
                     {{ 'admin/files'|manual }}
                     {% if 'manager'|is_authorized %}
-                        {{  _('edit settings')|button(url_for('admin_settings', category='files')) }}
+                        {{  _('edit')|button(url_for('admin_settings', category='files')) }}
                     {% endif %}
                     {{ _('list')|button(url_for('file_index')) }}
                     {{ _('file')|button(url_for('file_insert')) }}
@@ -85,7 +85,7 @@
                 <div class="tab-pane fade" role="tabpanel" id="tab-general">
                     <div class="toolbar">
                         {{ 'admin/general'|manual }}
-                        {{ _('edit settings')|button(url_for('admin_settings', category='general')) }}
+                        {{ _('edit')|button(url_for('admin_settings', category='general')) }}
                         {{ _('system log')|button(url_for('admin_log')) }}
                     </div>
                     {{ info.general|display_info }}
@@ -93,7 +93,7 @@
                 <div class="tab-pane fade" role="tabpanel" id="tab-email">
                     <div class="toolbar">
                         {{ 'admin/mail'|manual }}
-                        {{ _('edit settings')|button(url_for('admin_settings', category='mail')) }}
+                        {{ _('edit')|button(url_for('admin_settings', category='mail')) }}
                     </div>
                     {{ info.mail|display_info }}
                     {% if settings.mail %}
@@ -103,14 +103,18 @@
             {% endif  %}
             {% if 'manager'|is_authorized %}
                 <div class="tab-pane fade" role="tabpanel" id="tab-modules">
+                    <div class="toolbar">
+                        {{ 'admin/modules'|manual }}
+                        {{ _('edit')|button(url_for('admin_settings', category='modules')) }}
+                    </div>
                     <div>
-                        {{ info.module|display_info }}
+                        {{ info.modules|display_info }}
                     </div>
                 </div>
                 <div class="tab-pane fade" role="tabpanel" id="tab-map">
                     <div class="toolbar">
                         {{ 'admin/map'|manual }}
-                        {{ _('edit settings')|button(url_for('admin_settings', category='map')) }}
+                        {{ _('edit')|button(url_for('admin_settings', category='map')) }}
                     </div>
                     <div>
                         {{ info.map|display_info }}
@@ -151,7 +155,7 @@
                         <h1>{{ 'API'|uc_first }}</h1>
                         {{ 'admin/api'|manual }}
                         {% if 'manager'|is_authorized %}
-                            {{ _('edit settings')|button(url_for('admin_settings', category='api')) }}
+                            {{ _('edit')|button(url_for('admin_settings', category='api')) }}
                         {% endif %}
                     </div>
                     {{ info.api|display_info }}
