--- a/openatlas/templates/login/index.html
+++ b/openatlas/templates/login/index.html
@@ -18,4 +18,7 @@
             <a href="{{ url_for('reset_password') }}">{{ _('Forgot your password?') }}</a>
         </p>
     {% endif %}
+    <p>
+        <a href="/static/manual/troubleshooting/login.html" target="_blank">{{ _('troubleshooting')|uc_first }}</a>
+    </p>
 {% endblock %}
