Manual: explanations for error codes

--- a/openatlas/templates/403.html
+++ b/openatlas/templates/403.html
@@ -12,6 +12,9 @@
     <p>
         {{ _("Please let us know if you think it's a bug") }}: <a href="{{ url_for('index_feedback') }}">{{ _('feedback')|uc_first }}</a>
     </p>
+    <div class="toolbar">
+        {{ 'troubleshooting/error_codes'|manual }}
+    </div>
     <p>
         <img src="/static/images/layout/403.jpg" alt="403 - Forbidden"><br>
         The northwest corner of the Forbidden City, Beijing, China<br>
