--- a/openatlas/templates/404.html
+++ b/openatlas/templates/404.html
@@ -14,6 +14,9 @@
     <p>
         {{ _('Use the back button of your browser or click <a href="/">here</a> to go to the main page.') }}
     </p>
+    <div class="toolbar">
+        {{ 'troubleshooting/error_codes'|manual }}
+    </div>
     <p>
         <img src="/static/images/layout/404.jpg" alt="404 - File not found"><br>
         Excavation of the Oseberg ship (from commons.wikimedia.org)
