--- a/openatlas/templates/418.html
+++ b/openatlas/templates/418.html
@@ -5,12 +5,12 @@
 {% block content %}
 <div class="container" style="text-align:center;">
     <h1>418 - I’m a teapot</h1>
+    <p>
+        {{ _("This entry doesn't exist. Maybe you followed an obsolete link.") }}
+    </p>
+    <div class="toolbar">
+        {{ 'troubleshooting/error_codes'|manual }}
+    </div>
     <img src="/static/images/layout/418.jpg" alt="418 - I’m a teapot">
-    <p>
-        This entry doesn't exist. Maybe you followed an out-dated link.
-    </p>
-    <p>
-        The application encountered an "id not found" error. If this problem persists please inform the site administrator.
-    </p>
 </div>
 {% endblock %}
