--- a/openatlas/templates/model/index.html
+++ b/openatlas/templates/model/index.html
@@ -4,6 +4,9 @@
     {{ [_('model')]|crumb }}
 {% endblock %}
 {% block content %}
+    <div class="toolbar">
+        {{ 'tools/model'|manual }}
+    </div>
     <div style="float:left">
         <a href="/static/images/model/openatlas_schema.png">
             <img src="/static/images/model/openatlas_schema.png" style="width:500px" alt="OpenAtlas schema">
