Modules: update install/upgrade SQL and notes

--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -108,6 +108,7 @@
                         {{ _('edit')|button(url_for('admin_settings', category='modules')) }}
                     </div>
                     <div>
+                        <h1>{{ _('Defaults for new user') }}</h1>
                         {{ info.modules|display_info }}
                     </div>
                 </div>
