padding for dropdown adjusted

--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="iconbutton dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" style="padding: 0px!important;"
                    aria-expanded="false"><span><i class="far fa-user"></i></span></a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="{{ url_for('profile_index') }}">
