--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -4,6 +4,10 @@ html, body, input, select, textarea {
     font-family: helvetica, arial, sans-serif;
 }
 
+#global-term {
+    width: 120px;
+}
+
 table.dataTable th {
     white-space:nowrap;
 }
