Removed arrow from navbar option dropdown

--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -4,6 +4,10 @@ html, body, input, select, textarea {
     font-family: helvetica, arial, sans-serif;
 }
 
+.navbar .dropdown-toggle::after {
+    display: none;
+}
+
 #global-term {
     width: 120px;
 }
